--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://Balaji-Persistent.github.io"
   "private": true,
   "dependencies": {
+    "gh-pages": "^3.2.3"
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
