--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-routing-model",
   "version": "0.1.0",
-  "homepage": "http://Balaji-Persistent.github.io/react-routing-model"
+  "homepage": "http://Balaji-Persistent.github.io/react-routing-model",
   "private": true,
   "dependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -24,7 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
